--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git</title>
 </head>
+    <header> 
+           <p>Logo + menu 
+           </p>
+    </header>
 <body>
-    
+    <h1> Salut Git</h1>
+    <p> Une phrase à enlever
+    </p>
+  
+<footer>
+    2023
+</footer>  
 </body>
 </html>
